--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing groups</h1>
 
-<table>
+<table cellpadding="10">
   <tr>
     <th>Name</th>
     <th>Roles</th>
@@ -12,7 +12,10 @@
 <% @groups.each do |group| %>
   <tr>
     <td><%= group.name %></td>
-    <td><%= group.roles %></td>
+    <td><% group.roles.each do |role|%>
+    	<%= role.name %>,
+    <% end %>
+    </td>
     <td><%= link_to 'Show', group %></td>
     <td><%= link_to 'Edit', edit_group_path(group) %></td>
     <td><%= link_to 'Destroy', group, :confirm => 'Are you sure?', :method => :delete %></td>
