--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -1,56 +1,84 @@
-body { background-color: #fff; color: #333; }
-
+body {
+	background-color:#fff;
+	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
+    font-size: 11px;
+    color: #333333;
+}
 body, p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size:   13px;
-  line-height: 18px;
+	font-family:verdana,arial,helvetica,sans-serif;
+	font-size:13px;
+	line-height:18px;
 }
-
 pre {
-  background-color: #eee;
-  padding: 10px;
-  font-size: 11px;
+	background-color:#eee;
+	padding:10px;
+	font-size:11px;
 }
-
-a { color: #000; }
-a:visited { color: #666; }
-a:hover { color: #fff; background-color:#000; }
-
+a {
+	color:#000;
+}
+a:visited {
+	color:#666;
+}
+a:hover {
+	color:#fff;
+	background-color:#000;
+}
 div.field, div.actions {
-  margin-bottom: 10px;
+	margin-bottom:10px;
 }
-
 #notice {
-  color: green;
+	color:green;
 }
-
 .field_with_errors {
-  padding: 2px;
-  background-color: red;
-  display: table;
+	padding:2px;
+	background-color:red;
+	display:table;
 }
-
 #error_explanation {
-  width: 450px;
-  border: 2px solid red;
-  padding: 7px;
-  padding-bottom: 0;
-  margin-bottom: 20px;
-  background-color: #f0f0f0;
+	width:450px;
+	border:2px solid red;
+	padding:7px;
+	padding-bottom:0;
+	margin-bottom:20px;
+	background-color:#f0f0f0;
 }
-
 #error_explanation h2 {
-  text-align: left;
-  font-weight: bold;
-  padding: 5px 5px 5px 15px;
-  font-size: 12px;
-  margin: -7px;
-  margin-bottom: 0px;
-  background-color: #c00;
-  color: #fff;
+	text-align:left;
+	font-weight:bold;
+	padding:5px 5px 5px 15px;
+	font-size:12px;
+	margin:-7px;
+	margin-bottom:0px;
+	background-color:#c00;
+	color:#fff;
+}
+#error_explanation ul li {
+	font-size:12px;
+	list-style:square;
 }
 
-#error_explanation ul li {
-  font-size: 12px;
-  list-style: square;
+.permissionTable{
+    position: relative;
+    border-collapse: collapse;
+    border: none;
+}
+
+.permissionTable th{
+    position: relative;
+    border: 1px solid #333333;
+    background-color: #F3F3F3;
+    padding: 5px;
+}
+
+.permissionTable td{
+    position: relative;
+    border: 1px solid #333333;
+    padding: 5px;
+    text-align: center;
+}
+
+th.invisible{
+    border: none;
+    background-color: #FFFFFF;
 }
